WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146307
Do not send touch events to the slider's thumb when it does not have a renderer.
https://bugs.webkit.org/show_bug.cgi?id=146307
Summary
Do not send touch events to the slider's thumb when it does not have a renderer.
alan
Reported
2015-06-24 20:38:21 PDT
1. <input type="range"> 2. input[type="range"]::-webkit-slider-thumb { display: none; } 3. Send touch event to the input element. -> crash.
Attachments
Patch
(6.20 KB, patch)
2015-06-24 20:56 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.15 KB, patch)
2015-06-25 08:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2015-06-25 08:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-06-24 20:38:39 PDT
rdar://problem/21539399
alan
Comment 2
2015-06-24 20:56:38 PDT
Created
attachment 255539
[details]
Patch
alan
Comment 3
2015-06-24 20:57:03 PDT
Need to find a way to mark the test iOS only.
David Kilzer (:ddkilzer)
Comment 4
2015-06-25 01:42:47 PDT
(In reply to
comment #3
)
> Need to find a way to mark the test iOS only.
Most of the platform-only tests live in LayoutTests/platform/ios-simulator/ios/.
alan
Comment 5
2015-06-25 08:26:54 PDT
Created
attachment 255556
[details]
Patch
alan
Comment 6
2015-06-25 08:27:30 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Need to find a way to mark the test iOS only. > > Most of the platform-only tests live in > LayoutTests/platform/ios-simulator/ios/.
Thanks!
alan
Comment 7
2015-06-25 08:57:15 PDT
Created
attachment 255557
[details]
Patch
WebKit Commit Bot
Comment 8
2015-06-25 10:42:51 PDT
Comment on
attachment 255557
[details]
Patch Clearing flags on attachment: 255557 Committed
r185955
: <
http://trac.webkit.org/changeset/185955
>
WebKit Commit Bot
Comment 9
2015-06-25 10:42:54 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 10
2019-02-06 09:19:14 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug