Do not send touch events to the slider's thumb when it does not have a renderer. https://bugs.webkit.org/show_bug.cgi?id=146307 rdar://problem/21539399

Reviewed by Simon Fraser.

Bail out early if either the touch target or the renderer() is null.

Source/WebCore:

Test: fast/events/touch/input-range-with-thumb-display-none-crash.html

* html/shadow/SliderThumbElement.cpp:
(WebCore::findTouchWithIdentifier):
(WebCore::SliderThumbElement::handleTouchStart):
(WebCore::SliderThumbElement::handleTouchMove):
(WebCore::SliderThumbElement::handleTouchEndAndCancel):

LayoutTests:

* fast/events/touch/input-range-with-thumb-display-none-crash-expected.txt: Added.
* fast/events/touch/input-range-with-thumb-display-none-crash.html: Added.


Canonical link: https://commits.webkit.org/164392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185955 268f45cc-cd09-0410-ab3c-d52691b4dbfc